contenido nuevo de inglés

--- a/lenguajes/javascript.pug
+++ b/lenguajes/javascript.pug
@@ -105,6 +105,10 @@ html
         a(href="https://asecuritysite.com/coding/asc2") Tabla utf-16
         p String.prototype.concat(str[, ...strN])
         p Qué es un operador.
+        h2 ¿Qué es un evento?
+        p Son la manera que tenemos en Javascript de controlar las acciones 
+            |de los visitantes y definir un comportamiento de la página cuando 
+            |se produzcan.
 
 
 
