--- a/public/css/stylecss.css
+++ b/public/css/stylecss.css
@@ -7,6 +7,7 @@
 
 html{
     font-size: 62.5%;
+    
 }
 
 body{
@@ -52,6 +53,7 @@ p::first-letter{
     color: red;
 }
 
-p::after{
+/* p::after{
     content:"emoji";
 }
+*/
