--- a/public/css/stylecss.css
+++ b/public/css/stylecss.css
@@ -7,18 +7,24 @@
 
 html{
     font-size: 62.5%;
-    
+
 }
 
 body{
+    
     font-size: 2rem;
-    background-color:azure;
-        
+
+}
+.uno{
+    /* @extend .green, lighten-3; */
+    background-color: #e8f5e9;
+    /* background-color: white; */
 }
 
 h1{
     
     text-align: center;
+    color: blue;
     @extend .green-text, darken-4;
     
 }
@@ -31,7 +37,6 @@ h2{
 .test1{
     display: flex;
     justify-content: center;
-    
 }
 
 textarea{
@@ -49,11 +54,11 @@ div p:nth-child(3){
     color:blue;    
 }
 
-p::first-letter{
+ p::first-letter{
     color: red;
 }
-
-/* p::after{
-    content:"emoji";
-}
 */
+
+ p::after{
+    content:"emoji";
+ }
