--- a/public/css/stylecss.css
+++ b/public/css/stylecss.css
@@ -31,6 +31,7 @@ h1{
 
 h2{
     text-align: center;
+    color: blue;
     @extend .green-text;
 }
 
@@ -38,12 +39,13 @@ h2{
     display: flex;
     justify-content: center;
     
+    
 }
 
-textarea{
+.test1 textarea{
     font-size: 1.6rem;
-    width: 50%vw;
-    height: 160rem;
+    width: 50vw;
+    height: 10rem;
 }
 
 h1:hover{
